--- a/Configs/tmux/.tmux.conf
+++ b/Configs/tmux/.tmux.conf
@@ -1,12 +1,16 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+set -g default-terminal "screen-256color"
+set -as terminal-features ",xterm-256color:RGB"
+
 # Rebind Leader
 set -g prefix C-s
 
 # Mouse Support
 set -g mouse on
 
+setw -g mode-keys vi
 set-option -g status-position top
 
 # Navigation
